--- a/House_price_regression.ipynb
+++ b/House_price_regression.ipynb
@@ -1791,7 +1791,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x14c9813fe48>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x29884bb9438>"
       ]
      },
      "execution_count": 13,
@@ -2002,7 +2002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2011,7 +2011,7 @@
        "(2919, 75)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2022,16 +2022,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x14c98664128>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x298854e9550>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2062,7 +2062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2123,7 +2123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2178,7 +2178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2195,7 +2195,7 @@
        "Name: 1stFlrSF, dtype: float64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2213,7 +2213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2222,7 +2222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2231,7 +2231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2240,7 +2240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2249,7 +2249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2258,7 +2258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2267,7 +2267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2276,7 +2276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2285,7 +2285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2294,7 +2294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2303,7 +2303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2312,7 +2312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2321,7 +2321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2330,7 +2330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2339,7 +2339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2348,7 +2348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2357,7 +2357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2366,7 +2366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2375,7 +2375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2384,7 +2384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2393,7 +2393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2402,7 +2402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2411,7 +2411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2427,7 +2427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2511,7 +2511,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2529,7 +2529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2539,7 +2539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -2623,7 +2623,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2634,7 +2634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2665,16 +2665,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x14c99b6bf98>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2988562e7b8>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2705,16 +2705,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x14c99c895f8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2988989ac88>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2746,7 +2746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2755,7 +2755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -2764,7 +2764,7 @@
        "(2919, 68)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2775,7 +2775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -2821,7 +2821,7 @@
        " 'Utilities']"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2832,7 +2832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2841,7 +2841,7 @@
        "(2919, 68)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2859,7 +2859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -2868,7 +2868,7 @@
        "(2919, 264)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2880,7 +2880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2889,7 +2889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2905,7 +2905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2915,7 +2915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2931,7 +2931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2947,7 +2947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2966,7 +2966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2976,7 +2976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -2985,7 +2985,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2996,69 +2996,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
     "y_pred = LR.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.linear_model import Ridge\n",
-    "R=Ridge()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Ridge(alpha=1.0, copy_X=True, fit_intercept=True, max_iter=None,\n",
-       "   normalize=False, random_state=None, solver='auto', tol=0.001)"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "R.fit(X_train,y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred2 = R.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.8947470208217563\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.metrics import r2_score,mean_squared_error\n",
-    "print(r2_score(y_test,y_pred2))"
    ]
   },
   {
@@ -3070,7 +3012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3079,7 +3021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -3088,7 +3030,7 @@
        "0.8780738819737316"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3107,7 +3049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -3380,7 +3322,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3391,7 +3333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -3412,7 +3354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -3684,7 +3626,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3695,7 +3637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3712,7 +3654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3721,7 +3663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -3731,7 +3673,7 @@
        "       181225.96075152, 106234.49865468, 229215.87861744])"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3756,7 +3698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3766,7 +3708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -3776,7 +3718,7 @@
        "   normalize=False, random_state=None, solver='auto', tol=0.001)"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3787,7 +3729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3796,7 +3738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -3814,7 +3756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3823,7 +3765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -3833,7 +3775,7 @@
        "       160802.92225742,  97982.53273661, 229310.46185268])"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3851,7 +3793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -3872,7 +3814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -3890,7 +3832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3899,7 +3841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -3909,7 +3851,7 @@
        "       180873.64117246, 106340.16767257, 229259.0618332 ])"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
